--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/file/d/1bvaCufaqSCugFXzgsJzXRYI_51TFpbsR/view?usp=sharing"
+                <a href="https://www.youtube.com/watch?v=UI6IFFMGuwY"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
