add framework and vs-cap sections

--- a/index.html
+++ b/index.html
@@ -222,17 +222,30 @@
     </div>
     <!--/ Abstract. -->
 
-    <!-- Paper video. -->
-    <!-- <div class="columns is-centered has-text-centered">
+    <!-- Framework -->
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+        <h2 class="title is-3">Framework</h2>
+          <img src="./static/images/transcrib3d_framework.jpg" alt="Framework">
+          <h2 class="subtitle has-text-centered">The overall <span class="dnerf">Transcrib3D</span> framework, which takes as input the colored point-cloud and referring expression (in green), and outputs the ID or bounding box of the referent object. To resolve the referring expression ``the chair in the corner of the room, between the white and yellow desks'', the framework needs to locate the pillow in the green box, while all other pillows in red boxes are distractors. </h2>
       </div>
-    </div> -->
-    <!--/ Paper video. -->
+      
+    </div>
+    <!--/ Framework -->
+
+    <!-- vs CAP -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Compare with Code-as-policies</h2>
+        <div style="display: flex;">
+          <img src="./static/images/example1_vs_cap.png" alt="First example" width="400" height="300" style="margin-right: 20px;" >
+          <img src="./static/images/example2_vs_cap.png" alt="Second example" width="400" height="300">
+      </div>
+      </div>
+    </div>
+    <!--/ vs CAP -->
+
+    
   </div>
 
   <!-- Images -->
