change framework font

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Framework</h2>
           <img src="./static/images/transcrib3d_framework.jpg" alt="Framework">
-          <h2 class="subtitle has-text-centered">The overall <span class="dnerf">Transcrib3D</span> framework, which takes as input the colored point-cloud and referring expression (in green), and outputs the ID or bounding box of the referent object. To resolve the referring expression ``the chair in the corner of the room, between the white and yellow desks'', the framework needs to locate the pillow in the green box, while all other pillows in red boxes are distractors. </h2>
+          <h2 class="content has-text-centered">The overall <span class="dnerf">Transcrib3D</span> framework, which takes as input the colored point-cloud and referring expression (in green), and outputs the ID or bounding box of the referent object. To resolve the referring expression ``the chair in the corner of the room, between the white and yellow desks'', the framework needs to locate the pillow in the green box, while all other pillows in red boxes are distractors. </h2>
       </div>
       
     </div>
