--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
-                  <span>Video</span>
+                  <span>Video (with sound)</span>
                 </a>
               </span>
             </div>
