--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Transcrib3D</span> reasons about complex 3D referring expression with real robots.
+        <span class="dnerf">Transcrib3D</span> reasons and acts according to complex 3D referring expression with real robots.
       </h2>
     </div>
   </div>
