--- a/index.html
+++ b/index.html
@@ -229,9 +229,17 @@
           <img src="./static/images/transcrib3d_framework.jpg" alt="Framework">
           <h2 class="content has-text-centered">The overall <span class="dnerf">Transcrib3D</span> framework, which takes as input the colored point-cloud and referring expression (in green), and outputs the ID or bounding box of the referent object. To resolve the referring expression ``the chair in the corner of the room, between the white and yellow desks'', the framework needs to locate the pillow in the green box, while all other pillows in red boxes are distractors. </h2>
       </div>
-      
     </div>
     <!--/ Framework -->
+
+    <!-- Experiments -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Experiments</h2>
+          <img src="./static/images/transcrib3d_table_1.png" alt="Framework">
+      </div>
+    </div>
+    <!--/ Experiments -->
 
     <!-- vs CAP -->
     <div class="columns is-centered has-text-centered">
@@ -240,7 +248,8 @@
         <div style="display: flex;">
           <img src="./static/images/example1_vs_cap.png" alt="First example" width="400" height="300" style="margin-right: 20px;" >
           <img src="./static/images/example2_vs_cap.png" alt="Second example" width="400" height="300">
-      </div>
+        </div>
+        <h2 class="content has-text-centered">Unlike other frameworks (e.g. Code-as-policies) that relies on off-the-shelf open vocabulary object detectors which typically struggle on understanding complex referring expression, our method correctly identifies referred objects even with complex referring expression.</h2>
       </div>
     </div>
     <!--/ vs CAP -->
