--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <img src="./static/images/example1_vs_cap.png" alt="First example" width="400" height="300" style="margin-right: 20px;" >
           <img src="./static/images/example2_vs_cap.png" alt="Second example" width="400" height="300">
         </div>
-        <h2 class="content has-text-centered">Unlike other frameworks (e.g. Code-as-policies) that relies on off-the-shelf open vocabulary object detectors which typically struggle on understanding complex referring expression, our method correctly identifies referred objects even with complex referring expression.</h2>
+        <h2 class="content has-text-centered">Unlike other frameworks (e.g. Code-as-policies) that rely on off-the-shelf open vocabulary object detectors which typically struggle on understanding complex referring expression, our method correctly identifies referred objects even with complex referring expression.</h2>
       </div>
     </div>
     <!--/ vs CAP -->
